--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL =mongodb+srv://root:1234@cluster0.lromsav.mongodb.net/pizza?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://root1:1234@cluster0.lromsav.mongodb.net/pizza?retryWrites=true&w=majority
