created functions changePrice, handleSize and handleChange

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-MONGO_URL = mongodb+srv://root1:1234@cluster0.lromsav.mongodb.net/pizza?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://thg:thg@cluster0.py9ftnv.mongodb.net/pizza?retryWrites=true&w=majority
+
+
+
